# Makefile for 
# Copyright (C) 2012 Massimo Marchi <marchi@michael2>
# $Header$
# $Log$
# what flags you want to pass to the C compiler & linker
CXXFLAGS = -g0 -O3 -Wall -fmessage-length=0 

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = g_rtp2hdb
g_rtp2hdb_SOURCES = MyToken.cpp Residue.cpp rtp2hdb.cpp MyToken.h Residue.h


